<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".CustomizeTableActivity" android:background="@color/background_gray">
	<androidx.constraintlayout.widget.ConstraintLayout
			android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_height="55dp"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:background="@color/white"
			android:id="@+id/buttonPanel">
		<ImageView
				android:src="@drawable/icon_settings"
				android:layout_width="35dp"
				android:layout_height="0dp" android:id="@+id/settingButton"
				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp" android:layout_marginEnd="25dp"
				tools:ignore="ContentDescription"/>
		<ImageView
				android:src="@drawable/icon_replay"
				android:layout_width="35dp"
				android:layout_height="0dp"
				app:layout_constraintEnd_toStartOf="@+id/settingButton" android:layout_marginEnd="20dp"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
				android:layout_marginTop="10dp" android:layout_marginBottom="10dp" tools:ignore="ContentDescription"/>
		<TextView
				android:text="@string/copyright"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" android:textSize="12sp"
				android:textColor="@color/background_gray"/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<ImageView
			android:src="@drawable/icon_2048_small"
			android:layout_width="45dp"
			android:layout_height="45dp" android:id="@+id/icon2048"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="20dp" android:layout_marginStart="20dp" tools:ignore="ContentDescription"/>
	<TextView
			android:text="@string/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20sp" app:layout_constraintStart_toEndOf="@+id/icon2048"
			app:layout_constraintTop_toTopOf="@+id/icon2048"
			app:layout_constraintBottom_toBottomOf="@+id/icon2048"
			android:layout_marginStart="10dp"/>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintTop_toBottomOf="@+id/icon2048" app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="20dp"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="20dp" android:layout_marginTop="20dp"
			android:layout_marginBottom="50dp">
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:id="@+id/customTitle" android:layout_weight="2" tools:ignore="ContentDescription"/>
		<TextView
				android:text="@string/number1"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="0.25" android:textSize="16sp"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:inputType="number"
				android:ems="10"
				android:id="@+id/customNumber1" android:text="2" tools:ignore="Autofill,HardcodedText,LabelFor"
				android:layout_weight="0.5" android:singleLine="true" android:textAlignment="center"/>
		<TextView
				android:text="@string/number2"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="0.25" android:textAllCaps="false"
				android:textSize="16sp"/>
		<EditText
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:inputType="number"
				android:ems="10"
				android:id="@+id/customNumber2" android:text="4" tools:ignore="Autofill,HardcodedText,LabelFor"
				android:layout_weight="0.5" android:singleLine="true" android:textAlignment="center"/>
		<TextView
				android:text="@string/spawnRatio"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:id="@+id/textView3" android:layout_weight="0.25"
				android:textSize="16sp"/>
		<SeekBar
				android:layout_width="match_parent"
				android:layout_height="0dp" android:id="@+id/seekPossibilityBar" android:max="100"
				android:progress="5" android:min="0" android:layout_weight="0.35"/>
		<TextView
				android:text="5%"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:id="@+id/textView4" android:layout_weight="0.25"
				android:textAlignment="center" tools:ignore="HardcodedText"/>
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:id="@+id/customStart" android:layout_weight="1" tools:ignore="ContentDescription"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>