<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ReplayActivity" android:orientation="vertical" android:id="@+id/replayBase">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="0dp" android:layout_weight="1">
		<com.github.nickid2018.simple2048.display.MarqueeTextView
				android:text="@string/replaying"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/replayingInfoLabel" android:textSize="20sp"
				android:ellipsize="marquee" android:marqueeRepeatLimit="marquee_forever" android:singleLine="true"/>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="3">
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="match_parent" android:layout_weight="1">
				<TextView
						android:layout_width="match_parent"
						android:layout_height="0dp" android:id="@+id/replayNowValue" android:layout_weight="1"
						android:textAlignment="center" android:text="0" android:textSize="42sp"
						android:textColor="@color/scoreColor" android:translationY="20dp"
						android:autoSizeTextType="uniform" android:autoSizeMaxTextSize="42sp" android:maxLines="1"/>
				<TextView
						android:text="@string/currentValue"
						android:layout_width="match_parent"
						android:layout_height="0dp" android:id="@+id/replayNowScoreLabel" android:layout_weight="0.5"
						android:textSize="20sp" android:textAlignment="center" android:translationY="-10dp"/>
			</LinearLayout>
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="0dp"
					android:layout_height="match_parent" android:layout_weight="1">
				<TextView
						android:text="0"
						android:layout_width="match_parent"
						android:layout_height="0dp" android:id="@+id/replayMaxValue" android:layout_weight="1"
						android:textAlignment="center" android:textSize="42sp" android:textColor="@color/scoreColor"
						android:translationY="20dp" android:autoSizeMaxTextSize="42sp"
						android:autoSizeTextType="uniform" android:maxLines="1"/>
				<TextView
						android:text="@string/nowMaxValue"
						android:layout_width="match_parent"
						android:layout_height="0dp" android:id="@+id/textView7" android:layout_weight="0.5"
						android:textSize="20sp" android:translationY="-10dp" android:textAlignment="center"/>
			</LinearLayout>
		</LinearLayout>
		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="1">
			<ImageView
					android:layout_width="36dp"
					android:layout_height="36dp" app:srcCompat="@drawable/run_pause"
					android:id="@+id/button_replayRun"
					app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toStartOf="@+id/button_replayStop" android:alpha="0.5"/>
			<ImageView
					android:layout_width="36dp"
					android:layout_height="36dp" app:srcCompat="@drawable/run_stop" android:id="@+id/button_replayStop"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/button_replayRun"
					android:alpha="0.5" app:layout_constraintEnd_toStartOf="@+id/button_replayJump"
			/>
			<ImageView
					android:layout_width="36dp"
					android:layout_height="36dp" app:srcCompat="@drawable/icon_settings"
					android:id="@+id/button_replaySetting"
					app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:alpha="0.5"
					app:layout_constraintStart_toEndOf="@+id/button_replayJump"/>
			<ImageView
					android:layout_width="36dp"
					android:layout_height="36dp" app:srcCompat="@drawable/run_jump" android:id="@+id/button_replayJump"
					app:layout_constraintStart_toEndOf="@+id/button_replayStop"
					app:layout_constraintEnd_toStartOf="@+id/button_replaySetting"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.505"
					android:alpha="0.5" android:onClick="onJump"/>
		</androidx.constraintlayout.widget.ConstraintLayout>
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="0.8">
			<TextView
					android:text="@string/progress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/progressLabel"
					android:textAlignment="center"/>
			<ProgressBar
					style="?android:attr/progressBarStyleHorizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/replayProgressBar" android:progressTint="@color/light_blue_400"
					android:scaleY="1.5"/>
		</LinearLayout>
	</LinearLayout>
	<com.github.nickid2018.simple2048.display.TableView
			android:layout_width="match_parent"
			android:layout_height="0dp" android:id="@+id/replayTableView" android:layout_weight="1.75"/>
</LinearLayout>