<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MultiplayerPrepareActivity">
	<Button
			android:text="@string/send"
			android:layout_width="0dp"
			android:layout_height="wrap_content" android:id="@+id/multiRoom_send"
			app:layout_constraintBottom_toBottomOf="parent"
			android:background="@drawable/button_background"
			app:layout_constraintStart_toEndOf="@+id/multiRoom_messageEdit"
			app:layout_constraintEnd_toEndOf="parent"/>
	<EditText
			android:layout_width="329dp"
			android:layout_height="47dp"
			android:ems="10"
			android:id="@+id/multiRoom_messageEdit"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" android:inputType="textAutoCorrect|textMultiLine"
			android:allowUndo="true"
			tools:ignore="Autofill,LabelFor"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content" android:id="@+id/multiRoom_roomInfo"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"/>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="416dp"
			android:layout_height="691dp"
			app:layout_constraintTop_toBottomOf="@+id/multiRoom_roomInfo" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/multiRoom_send" android:id="@+id/linearLayout">
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="1" android:baselineAligned="false">
			<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="0dp"
					android:layout_height="match_parent" android:layout_weight="1" tools:ignore="NestedWeights">
				<TextView
						android:text="@string/startGame"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintBottom_toBottomOf="parent"
						android:textSize="20sp" android:id="@+id/startGameLabel"/>
				<ImageView
						android:layout_width="0dp"
						android:layout_height="0dp"
						android:id="@+id/multiRoom_confirm"
						app:layout_constraintStart_toEndOf="@+id/startGameLabel"
						app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="@+id/startGameLabel" tools:ignore="ContentDescription"/>
				<TextView
						android:text="@string/roomOwner"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:id="@+id/roomOwnerLabel"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintStart_toStartOf="parent" android:textSize="20sp"/>
				<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content" android:id="@+id/multiRoom_owner"
						app:layout_constraintTop_toBottomOf="@+id/roomOwnerLabel"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintEnd_toEndOf="parent"/>
			</androidx.constraintlayout.widget.ConstraintLayout>
			<ListView
					android:layout_width="0dp"
					android:layout_height="match_parent" android:layout_weight="2"
					android:id="@+id/multiRoom_nowPlayers"/>
		</LinearLayout>
		<ScrollView
				android:layout_width="match_parent"
				android:layout_height="0dp" android:layout_weight="3">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content" android:id="@+id/multiRoom_messageBox"/>
		</ScrollView>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>